Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-591

Stomp client connections can't properly convert composite destinations

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.9.1
    • 3.9.2
    • None
    • None

    Description

      When a STOMP client tries to subscribe or send to a composite destination the destination conversion doesn't properly manage the conversion of the ActiveMQDestination into a STOMP destination string and can result in a bad subscription being made.

      Attachments

        Activity

          People

            tabish Timothy A. Bish
            tabish Timothy A. Bish
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: