https://issues.apache.org/jira/browse/AMQCPP-591

Perform a complete conversion on the composite elements of a destination
passing through the STOMP wireFormat converter.
(cherry picked from commit c1c1aecc61f1adfdd8bb52ec06a4bb8fce7fa105)